# numFortran

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  libraryTest.f08  libraryTest.f90
src/: constants.f08  cubicSpline.f08  integration.f08  matrixSolver.f08  nfConstants.f90  nfIntegration.f90  nfSpecialFunctions.f90  odeSolver.f08  parameters.f08  randomNumbers.f08  randomNumbers.f90  sorting.f08  sorting.f90  specialFunctions.f08  statTests.f08
srcOLD/: integration.f90  odeSolver.f90  randomNumbers.f90  statTests.f90
test/: testRandNum.f08
test/data/: testLibraryPython.py
tests/: testLibraryPython.py
